--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,18 +1,28 @@
+@use "../color";
+
 .App {
   text-align: center;
 
   &-header {
-    background-color: #282c34;
+    background-color: white;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: black;
   }
 
   &-link {
-    color: #61dafb;
+    padding: 1em;
+    border-radius: 2em;
+    background-color: color.$button-face;
+    color: white;
+    text-decoration: none;
+
+    &:hover {
+      background-color: color.$button-face--hover;
+    }
   }
 }
