--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -12,9 +12,19 @@
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: black;
+
+    h1 {
+      vertical-align: middle;
+
+      img {
+        width: 2em;
+        vertical-align: middle;
+      }
+    }
   }
 
   &-link {
+    margin: 3em;
     padding: 1em;
     border-radius: 2em;
     background-color: color.$button-face;
