update: Open the user profile in the app when clicking on the member frame.

--- a/src/color.scss
+++ b/src/color.scss
@@ -3,3 +3,5 @@ $button-face--hover: hsl(197, 71%, 60%);
 
 $member-face: hsl(197, 71%, 90%);
 $member-face--hover: hsl(197, 71%, 73%);
+
+$profile-face: hsl(197, 50%, 95%);
