--- a/src/components/OwnershipList/OwnershipList.scss
+++ b/src/components/OwnershipList/OwnershipList.scss
@@ -1,7 +1,8 @@
 .lists-box {
 	display: flex;
 	flex-direction: column;
-	width: 320px;
+	min-width: 320px;
+	max-width: 320px;
 
 	.lists {
 		display: grid;
