Add: Add or delete list members Change: Retain acquired list information

--- a/src/components/OwnershipList/OwnershipList.scss
+++ b/src/components/OwnershipList/OwnershipList.scss
@@ -3,6 +3,8 @@
 	flex-direction: column;
 	min-width: 320px;
 	max-width: 320px;
+    overflow: hidden auto;
+    max-height: calc(100vh - 1.5em);
 
 	.lists {
 		display: grid;
